refactor: 优化多租户角色权限管理和BFF权限扫描机制
主要改进:
- 删除冗余的 PlatformRoleResourceV1,简化平台角色管理架构
- 新增租户角色隔离验证,通过 findAllByIdAndTenantId 确保租户数据隔离
- 优化权限扫描机制,使用 Version.class.getPackageName() 替代硬编码包名
- 增强 BffAdminAccessAuthorities 权限定义,添加综合权限控制
- 改进 FindPermissionByUserIdConvertTreeService,支持租户所有者和租户员工权限树查询
- 移除废弃的 searchAuthorities 方法,清理无用代码
- 统一访问令牌中的租户ID和角色信息获取逻辑

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>